corrigir bug
